настроен автовыбор CDO репозитория (lnx/win). +некоторый рефакторинг.